--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
+    "plugins":[
+        [
+            "@babel/plugin-proposal-class-properties", {"loose": true}
+        ]
+    ],
     "presets": [
         "@babel/env",
         "@babel/preset-react"
